[project]
name = "oss4aiseptember"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "google-generativeai>=0.8.5",
    "mcp-agent>=0.1.20",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "twscrape>=0.17.0",
]
